--- a/b-tree/b-tree.vcxproj.filters
+++ b/b-tree/b-tree.vcxproj.filters
@@ -20,10 +20,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="b-tree.h">
+    <ClInclude Include="node-b-tree_backup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="b-tree_backup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="node-b-tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="b-tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
